refactor, move interactive_access to a role

--- a/ansible/bootstrap.yaml
+++ b/ansible/bootstrap.yaml
@@ -16,7 +16,7 @@
     - name: Add authorized key
       authorized_key:
         user: "{{ ansible_username }}"
-        key: "{{ lookup('file', ansible_ssh_key_file + '.pub') }}"
+        key: "{{ lookup('file', ansible_ssh_public_key_file) }}"
         exclusive: yes
         state: present
     - name: Grant no-password sudo privilege
@@ -25,28 +25,7 @@
         dest: "/etc/sudoers.d/{{ ansible_username }}"
         mode: 0600
   vars:
-    ansible_ssh_private_key_file: "{{ root_ssh_key_file }}"
-
-# set up interactive user
-- hosts: interactive_access
-  become: yes
-  tasks:
-    - name: Create interactive user
-      user:
-        name: "{{ interactive_username }}"
-        password: "{{ interactive_password | password_hash('sha512') }}"
-        comment: "interactive user"
-        groups: "{{ interactive_groups }}"
-        append: yes
-        shell: /bin/bash
-        create_home: yes
-        update_password: on_create
-        state: present
-    - name: Add authorized key
-      authorized_key:
-        user: "{{ interactive_username }}"
-        key: "{{ lookup('file', interactive_ssh_key_file + '.pub') }}"
-        state: present
+    ansible_ssh_private_key_file: "{{ root_ssh_private_key_file }}"
 
 # disable ssh login by password and empty passwords
 - hosts: all
