--- a/ansible/bootstrap.yaml
+++ b/ansible/bootstrap.yaml
@@ -2,7 +2,8 @@
 
 # set up ansible remote user
 - hosts: all
-  remote_user: root
+  remote_user: "{{ bootstrap_username | default('root') }}"
+  become: yes
   tasks:
     - name: Create ansible user
       user:
@@ -25,7 +26,7 @@
         dest: "/etc/sudoers.d/{{ ansible_username }}"
         mode: 0600
   vars:
-    ansible_ssh_private_key_file: "{{ root_ssh_private_key_file }}"
+    ansible_ssh_private_key_file: "{{ bootstrap_ssh_private_key_file | default(root_ssh_private_key_file) }}"
 
 # disable ssh login by password and empty passwords
 - hosts: all
