--- a/ansible/roles/interactive_access/defaults/main.yaml
+++ b/ansible/roles/interactive_access/defaults/main.yaml
@@ -1,2 +1,7 @@
-interactive_groups: 
-  - sudo
+interactive:
+  username:
+  password:
+  ssh_public_key_file: ~/.ssh/id_rsa.pub
+  groups: 
+    - sudo
+  
