--- a/ansible/bootstrap.yaml
+++ b/ansible/bootstrap.yaml
@@ -1,35 +1,16 @@
 ---
 
-# set up ansible remote user
-- hosts: all
+- name: Set up ansible remote user
+  hosts: all
   remote_user: "{{ bootstrap_username | default('root') }}"
   become: yes
-  tasks:
-    - name: Create ansible user
-      user:
-        name: "{{ ansible_username }}"
-        password: "{{ ansible_password | password_hash('sha512') }}"
-        comment: "ansible user"
-        shell: /bin/bash
-        create_home: yes
-        update_password: on_create
-        state: present
-    - name: Add authorized key
-      authorized_key:
-        user: "{{ ansible_username }}"
-        key: "{{ lookup('file', ansible_ssh_public_key_file) }}"
-        exclusive: yes
-        state: present
-    - name: Grant no-password sudo privilege
-      copy:
-        content: "{{ ansible_username }} ALL=(ALL) NOPASSWD: ALL"
-        dest: "/etc/sudoers.d/{{ ansible_username }}"
-        mode: 0600
   vars:
     ansible_ssh_private_key_file: "{{ bootstrap_ssh_private_key_file | default(root_ssh_private_key_file) }}"
+  roles:
+    - role: ansible_access
 
-# disable ssh login by password and empty passwords
-- hosts: all
+- name: Disable ssh login by password and empty passwords
+  hosts: all
   become: yes
   vars:
     sshd:
