--- a/ansible/roles/interactive_access/tasks/main.yaml
+++ b/ansible/roles/interactive_access/tasks/main.yaml
@@ -1,9 +1,9 @@
 - name: Create interactive user
   user:
-    name: "{{ interactive_username }}"
-    password: "{{ interactive_password | password_hash('sha512') }}"
+    name: "{{ interactive.username }}"
+    password: "{{ interactive.password | password_hash('sha512') }}"
     comment: "interactive user"
-    groups: "{{ interactive_groups }}"
+    groups: "{{ interactive.groups }}"
     append: yes
     shell: /bin/bash
     create_home: yes
@@ -12,6 +12,6 @@
 
 - name: Add authorized key
   authorized_key:
-    user: "{{ interactive_username }}"
-    key: "{{ lookup('file', interactive_ssh_public_key_file) }}"
+    user: "{{ interactive.username }}"
+    key: "{{ lookup('file', interactive.ssh_public_key_file) }}"
     state: present
