--- a/ansible/sandbox.yaml
+++ b/ansible/sandbox.yaml
@@ -1,10 +1,8 @@
 ---
 
-- name: Update all apt packages
-  hosts: all:!noop
-  become: yes
-  tasks:
-    - name: Update packages
-      apt:
-        update_cache: yes
-        upgrade: safe
+- name: Test rclone
+  hosts: media
+  vars:
+    rclone_local_config_dir: roles/rclone/sample_config_dir/
+  roles:
+    - role: rclone
