--- a/media_server.yaml
+++ b/media_server.yaml
@@ -1,7 +1,7 @@
 ---
 
-- name: Update all apt packages
-  hosts: all:!noop
+- name: Update existing apt packages
+  hosts: media
   become: yes
   tasks:
     - name: Update packages
@@ -9,14 +9,13 @@
         update_cache: yes
         upgrade: safe
 
-- name: Set up docker environment
-  hosts: all:!noop
+- name: Set up Docker environment
+  hosts: media
   vars:
     docker_edition: 'ce'
-    docker_install_compose: true
     docker_package_state: present
   roles:
-    - role: geerlingguy.docker
+    - role: docker
 
 - name: Set up rclone drives
   hosts: media
