do not purge nginx networks by default

--- a/roles/nginx/tasks/main.yaml
+++ b/roles/nginx/tasks/main.yaml
@@ -31,7 +31,7 @@
       - "{{ nginx_certs_path }}:/etc/nginx/certs"
     ports: "{{ nginx_ports | unique | map('string') | map('regex_replace', '([0-9]+)', '\\1:\\1') }}"
     networks: "{{ nginx_networks | unique }}"
-    purge_networks: yes
+    purge_networks: "{{ purge_nginx_networks }}"
     networks_cli_compatible: no
     container_default_behavior: no_defaults
     restart_policy: always
