--- a/roles/wordpress/tasks/main.yaml
+++ b/roles/wordpress/tasks/main.yaml
@@ -1,27 +1,27 @@
 - name: Set up data folder
   become: yes
   file:
-    path: "{{ mysql_data_path }}"
+    path: "{{ wordpress_data_path }}"
     state: directory
 
 - name: Set up docker networks
   docker_network: 
     name: "{{ item.name }}"
-  loop: "{{ mysql_networks | unique }}"
+  loop: "{{ wordpress_networks | unique }}"
 
-- name: Start MySQL container
+- name: Start wordpress container
   docker_container:
-    name: "{{ mysql_container_name }}"
-    image: mariadb
+    name: "{{ wordpress_container_name }}"
+    image: wordpress
     env:
-      MYSQL_ROOT_PASSWORD: "{{ mysql_root_password }}"
-      MYSQL_DATABASE: "{{ mysql_databse }}"
-      MYSQL_USER: "{{ mysql_username }}"
-      MYSQL_PASSWORD: "{{ mysql_password }}"
+      WORDPRESS_DB_HOST: "{{ wordpress_db_host }}"
+      WORDPRESS_DB_NAME: "{{ wordpress_db_name }}"
+      WORDPRESS_DB_USER: "{{ wordpress_db_username }}"
+      WORDPRESS_DB_PASSWORD: "{{ wordpress_db_password }}"
     volumes:
       - "/bin/netstat:/bin/netstat:ro"
-      - "{{ mysql_data_path }}:/var/lib/mysql"
-    networks: "{{ mysql_networks | unique }}"
+      - "{{ wordpress_data_path }}:/var/www/html"
+    networks: "{{ wordpress_networks | unique }}"
     purge_networks: yes
     networks_cli_compatible: no
     container_default_behavior: no_defaults
@@ -32,7 +32,9 @@
         - CMD-SHELL
         - "netstat -ntlp"
         - "|" 
-        - "grep:3306"
+        - "grep:80"
       interval: 10s
       timeout: 2s
       retries: 3
+
+    
