--- a/sandbox.yaml
+++ b/sandbox.yaml
@@ -1,15 +1,13 @@
 ---
 
-# - name: Test nginx in docker
-#   hosts: sandbox
-#   vars:
-#   roles:
-#     - role: nginx
-
-- name: Set up mysql
-  hosts: sandbox
+- name: nginx settings
+  hosts: contabo_us
   vars:
-    mysql_databse: wordpress
-    # mysql_backup_file: mysql/backup/wordpress.sql
+    website_domain_name: "{{domain_name}}"
+    website_networks:
+      - name: wordpress
+    wordpress_container_name: wordpress
+    mysql_container_name: mysql_wp
+    mysql_databse: mysql_default_db
   roles:
-    - role: mysql
+    - role: website
