--- a/debug_print.yaml
+++ b/debug_print.yaml
@@ -1,14 +1,28 @@
 ---
 
-- name: Print all local variables
-  hosts: localhost
-  tasks:
-    - debug:
-        var: hostvars[inventory_hostname]
+# - name: Print all local variables
+#   hosts: localhost
+#   tasks:
+#     - debug:
+#         var: hostvars[inventory_hostname]
 
-- name: print all hostnames
-  hosts: all
-  become: yes
+# - name: print all hostnames
+#   hosts: all
+#   become: yes
+#   tasks:
+#     - debug:
+#         msg: "hostname is: {{ inventory_hostname }}"
+
+- name: Print
+  hosts: contabo_us
   tasks:
     - debug:
-        msg: "hostname is: {{ inventory_hostname }}"
+        var: domain_names
+    - debug:
+        var: www_server_types
+    - debug:
+        msg: wordpress needed
+      when: "'wordpress' in www_server_types"
+    - debug:
+        msg: static needed
+      when: "'static' in www_server_types"
