--- a/roles/wordpress/tasks/main.yaml
+++ b/roles/wordpress/tasks/main.yaml
@@ -30,9 +30,7 @@
     healthcheck:
       test:
         - CMD-SHELL
-        - "netstat -ntlp"
-        - "|" 
-        - "grep:80"
+        - "netstat -ntlp | grep -q :80"
       interval: 10s
       timeout: 2s
       retries: 3
