--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -1,22 +1,8 @@
 - name: Set up data folder
   become: yes
   file:
-    path: "{{ mysql_data_path }}/{{ item }}"
+    path: "{{ mysql_data_path }}"
     state: directory
-  loop:
-    - data
-    - backup
-
-- name: Copy backup file to remote
-  become: yes
-  copy:
-    src: "{{ mysql_backup_file }}"
-    dest: "{{ mysql_data_path }}/backup/backup.sql"
-  when: mysql_backup_file
-
-- name: Append MySQL networks to nginx networks list
-  set_fact:
-    nginx_networks: "{{ nginx_networks | default([]) + mysql_networks }}"
 
 - name: Set up docker networks
   docker_network: 
@@ -25,23 +11,28 @@
 
 - name: Start MySQL container
   docker_container:
-    name: mysql
-    image: mysql
+    name: "{{ mysql_container_name }}"
+    image: mariadb
     env:
       MYSQL_ROOT_PASSWORD: "{{ mysql_root_password }}"
       MYSQL_DATABASE: "{{ mysql_databse }}"
       MYSQL_USER: "{{ mysql_username }}"
       MYSQL_PASSWORD: "{{ mysql_password }}"
     volumes:
-      - "{{ mysql_data_path }}/data:/var/lib/mysql"
+      - "/bin/netstat:/bin/netstat:ro"
+      - "{{ mysql_data_path }}:/var/lib/mysql"
     networks: "{{ mysql_networks | unique }}"
     purge_networks: yes
     networks_cli_compatible: no
     container_default_behavior: no_defaults
     restart_policy: always
-    
-- name: Recover from backup file
-  become: yes
-  shell:
-    cmd: "docker exec -i mysql sh -c 'exec mysql -uroot -p\"$MYSQL_ROOT_PASSWORD\"' < {{ mysql_data_path }}/backup/backup.sql"
-  when: mysql_backup_file
+    recreate: yes
+    healthcheck:
+      test:
+        - CMD-SHELL
+        - "netstat -ntlp"
+        - "|" 
+        - "grep:3306"
+      interval: 10s
+      timeout: 2s
+      retries: 3
