only request ssl certs when necessary

--- a/media_server.yaml
+++ b/media_server.yaml
@@ -11,6 +11,7 @@
 
 - name: Set up Docker environment
   hosts: media
+  become: yes
   vars:
     docker_edition: 'ce'
     docker_package_state: present
