--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -11,6 +11,7 @@
 
 - name: Set up Docker environment
   hosts: wordpress
+  become: yes
   vars:
     docker_edition: 'ce'
     docker_package_state: present
@@ -19,8 +20,6 @@
 
 - name: Set up SSL certificates
   hosts: wordpress
-  vars:
-    request_new_certs: no
   roles:
     - role: certbot
 
