--- a/roles/wordpress/tasks/main.yaml
+++ b/roles/wordpress/tasks/main.yaml
@@ -26,6 +26,7 @@
     networks_cli_compatible: no
     container_default_behavior: no_defaults
     restart_policy: always
+    pull: yes
     recreate: yes
     healthcheck:
       test:
