user full name for docker_container task

--- a/roles/certbot/tasks/main.yaml
+++ b/roles/certbot/tasks/main.yaml
@@ -20,7 +20,7 @@
   when: request_new_certs
 
 - name: Request new certificates
-  docker_container:
+  community.general.docker_container:
     name: certbot_request
     image: certbot/dns-cloudflare
     volumes:
