--- a/roles/wordpress/tasks/main.yaml
+++ b/roles/wordpress/tasks/main.yaml
@@ -23,7 +23,7 @@
       - "{{ wordpress_data_path }}:/var/www/html"
     networks: "{{ wordpress_networks }}"
     purge_networks: yes
-    networks_cli_compatible: no
+    networks_cli_compatible: yes
     container_default_behavior: no_defaults
     restart_policy: always
     pull: yes
