--- a/roles/xray/tasks/main.yaml
+++ b/roles/xray/tasks/main.yaml
@@ -38,7 +38,7 @@
       - "{{ xray_data_path }}/log:/var/log/xray"
     networks: "{{ xray_networks }}"
     purge_networks: yes
-    networks_cli_compatible: no
+    networks_cli_compatible: yes
     container_default_behavior: no_defaults
     restart_policy: always
     pull: yes
