reset ssh connection after making changes to users and groups

--- a/roles/ansible_access/tasks/main.yaml
+++ b/roles/ansible_access/tasks/main.yaml
@@ -25,4 +25,7 @@
     state: directory
     owner: "{{ username }}"
     group: "{{ username }}"
-    
+
+- name: Reset SSH connection to apply changes
+  meta: reset_connection
+  
